lab/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-nginx-deployment
  labels:
    app: lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab
  template:
    metadata:
      labels:
        app: lab
    spec:
      containers:
      - name: nginx-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
