lab/nginx-nodeport.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-nodeport-deployment
#   labels:
#     app: lab
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: lab
#   template:
#     metadata:
#       labels:
#         app: lab
#     spec:
#       containers:
#       - name: nginx-container
#         image: nginx
#         resources:
#           limits:
#             memory: "128Mi"
#             cpu: "500m"
#         ports:
#         - containerPort: 80 
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginxnodeport-service
# spec:
#   selector:
#     lab: nginxhttpd
#   type: NodePort
#   ports: 
#   - protocol: TCP
#     port: 80       
#     targetPort: 80
#     nodePort: 30007






# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
# nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
