lab/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-nginx-service
spec:
  selector:
    app: lab
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
