lab/nginx-network-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-combined-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
      environment: dev
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:  
            matchLabels:
              app: allowed-namespace
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
